tests/snapshots/snapshot_expansion__capability_report_completely_unsupported.snap
---
source: tests/snapshot_expansion.rs
expression: report
---
{
  "compatible": false,
  "native_count": 0,
  "emulated_count": 0,
  "unsupported_count": 2,
  "summary": "0 native, 0 emulated, 2 unsupported — incompatible",
  "details": [
    [
      "Streaming",
      {
        "level": "unsupported",
        "reason": "Unsupported support does not meet minimum Native"
      }
    ],
    [
      "ToolUse",
      {
        "level": "unsupported",
        "reason": "Unsupported support does not meet minimum Native"
      }
    ]
  ]
}
