tests/snapshots/snapshot_expansion__capability_report_mixed_emulation.snap
---
source: tests/snapshot_expansion.rs
expression: report
---
{
  "compatible": false,
  "native_count": 1,
  "emulated_count": 1,
  "unsupported_count": 1,
  "summary": "1 native, 1 emulated, 1 unsupported — incompatible",
  "details": [
    [
      "Streaming",
      {
        "level": "native"
      }
    ],
    [
      "ToolUse",
      {
        "level": "emulated",
        "method": "adapter"
      }
    ],
    [
      "ExtendedThinking",
      {
        "level": "unsupported",
        "reason": "explicitly marked unsupported"
      }
    ]
  ]
}
