tests/snapshots/snapshot_expansion__emulation_engine_disabled_strategy.snap
---
source: tests/snapshot_expansion.rs
expression: report
---
{
  "applied": [],
  "warnings": [
    "Capability CodeExecution not emulated: Cannot safely emulate sandboxed code execution"
  ]
}
