tests/snapshots/snapshot_expansion__emulation_engine_post_processing_strategy.snap
---
source: tests/snapshot_expansion.rs
expression: report
---
{
  "applied": [
    {
      "capability": "structured_output_json_schema",
      "strategy": {
        "type": "post_processing",
        "detail": "Parse and validate JSON from text response"
      }
    }
  ],
  "warnings": []
}
