tests/snapshots/snapshot_expansion__emulation_engine_system_prompt_strategy.snap
---
source: tests/snapshot_expansion.rs
expression: report
---
{
  "applied": [
    {
      "capability": "extended_thinking",
      "strategy": {
        "type": "system_prompt_injection",
        "prompt": "Think step by step before answering."
      }
    }
  ],
  "warnings": []
}
