tests/snapshots/snapshot_expansion__error_all_categories_snapshot.snap
---
source: tests/snapshot_expansion.rs
expression: snapshot
---
[
  {
    "category": "protocol",
    "code": "protocol_invalid_envelope"
  },
  {
    "category": "backend",
    "code": "backend_not_found"
  },
  {
    "category": "capability",
    "code": "capability_unsupported"
  },
  {
    "category": "policy",
    "code": "policy_denied"
  },
  {
    "category": "workspace",
    "code": "workspace_init_failed"
  },
  {
    "category": "ir",
    "code": "ir_lowering_failed"
  },
  {
    "category": "receipt",
    "code": "receipt_hash_mismatch"
  },
  {
    "category": "dialect",
    "code": "dialect_unknown"
  },
  {
    "category": "config",
    "code": "config_invalid"
  },
  {
    "category": "internal",
    "code": "internal"
  }
]
