tests/snapshots/snapshot_expansion__error_dto_backend_timeout_full_context.snap
---
source: tests/snapshot_expansion.rs
expression: dto
---
{
  "code": "backend_timeout",
  "message": "Backend did not respond within 30s",
  "context": {
    "attempt": 3,
    "backend_id": "sidecar:claude",
    "timeout_ms": 30000,
    "work_order_id": "wo-abc-123"
  }
}
