tests/snapshots/snapshot_expansion__error_dto_dialect_mapping_failed.snap
---
source: tests/snapshot_expansion.rs
expression: dto
---
{
  "code": "dialect_mapping_failed",
  "message": "Cannot map extended_thinking from Claude to OpenAI",
  "context": {
    "feature": "extended_thinking",
    "fidelity": {
      "reason": "OpenAI has no thinking API",
      "type": "unsupported"
    },
    "source_dialect": "claude",
    "target_dialect": "openai"
  }
}
